# anomalib-tensorrt-cpp

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  inference.hpp  logging.h  main.cpp  main_dynamic_batch.cpp  opencv_utils.cpp  opencv_utils.h  test.cpp  utils.cpp  utils.h
include/: location.txt
